<resources>
    <string name="app_name">Magic Mirror</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content"></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_weather">Weather</string>
    <string name="pref_header_app">Settings</string>
    <string name="weatherIconDescription">Weather Icon</string>

    <string name="pref_title_autorun">Run on device startup</string>
    <string name="pref_description_autorun">Start Magic Mirror automatically when the device boots</string>

    <string name="pref_title_weather_reports">Enable weather reports</string>
    <string name="pref_title_weather_units">Use fahrenheit scale</string>
    <string name="pref_title_windspeed_units">Use KPH for wind speed</string>
    <string name="pref_description_windspeed_units">Default is MPH</string>
    <string name="pref_description_weather_reports">Display local weather reports
    </string>
    <string name="pref_description_weather_units">Default is centigrade</string>
    <string name="pref_auto_location">Override device\'s location</string>

    <string name="pref_title_display_name">Location (format: Town, Country)</string>
    <string name="pref_auto_location_title">Set location manually</string>
    <string name="pref_weather_lat_long">Dumbarton, Scotland</string>
    <string name="pref_rss_custom_url">https://www.androidauthority.com/android-development/feed/</string>
    <string name="pref_description_rss_feed">Use a custom RSS feed</string>
    <string name="pref_title_rss_feed">Custom RSS feed</string>
    <string name="pref_title_custom_rss_feed">Enter feed URL. Prefix with transport, eg http://</string>
    <string name="weather_error">Error updating weather\nPlease check your settings</string>
    <string name="news_error">Error updating news</string>
    <string name="rss_error">Error retrieving RSS feed</string>
    <string name="rss_suggestion">Please check URL and</string>
    <string name ="rss_checkxport">transport in settings</string>
    <string name="location_error">Location not found</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="darksky_api_key">a2473c26e33cdf595533164fc3e19824</string>
    <string name="openweathermap_api_key">170e49c651266a64ef7fd5e526def9d3</string>
    <string name="pref_custom_api_key">Use custom OpenWeather API key</string>
    <string name="custom_api_key">Custom API key</string>
    <string name="pref_custom_api_summary">Obtain your own key from https://openweathermap.org/api"</string>
    <string name="pref_custom_api_help">Enter your API key here. You must verify your email address to validate your key. New keys may take a few minutes to become active.</string>
    <string name="permission_rationale">Location permission is needed for automatic location mode</string>
    <string name="no_location_detected">Location lookup failed</string>
    <string name="permission_denied_explanation">Location permission was denied. Please set location manually.</string>
    <string name="settings">Settings</string>
    <string name="settings_tip">Tip: tap the weather icon or clock for settings</string>
    <string name="pin_title">Keep Magic Mirror in foreground</string>
    <string name="pin_summary">Requires Android Marshmallow or greater</string>
    <string name="pref_bold_weather_text">Display weather in bold</string>
    <string name="pref_bold_news_text">Display news in bold</string>
    <string name="display_webpage_summary">Choose your own content</string>
    <string name="display_webpage_title">Display a custom webpage</string>
    <string name="display_webpage_percent_summary">How much screen to occupy</string>
    <string name="display_webpage_percent_title">Proportion of screen height to use</string>
    <string name="display_webpage_scale_title">Web page display scale</string>
    <string name="display_webpage_url_summary">Include http:// or https://</string>
    <string name="display_webpage_url_title">URL of page to display</string>
    <!--string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_news_stories_to_display">News stories to display</string>
    <string-array name="pref_news_story_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="pref_weather_font_size">Weather font size</string>
    <string-array name="pref_weather_font_sizes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="pref_news_font_size">News font size</string>
    <string-array name="pref_news_font_sizes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="pref_news_story_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_news">News</string>

    <string name="pref_title_new_message_notifications">Enable news reports</string>

    <string name="pref_title_ringtone">RSS Source</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Items to display</string>

    <string name="status_bar_clock_12hr_format"><font size="36">h:mm a\n</font><font size="18">E, dd MMM</font></string>
    <string name="status_bar_clock_24hr_format"><font size="36">H:mm\n</font><font size="18">E, dd MMM</font></string>

    <string name="permission_fine_location_rationale">Permission is required to access the device\'s location</string>
    <string name="ok">OK</string>

    <!--
     android:format12Hour="h:mm a\nE, dd MMM"
     android:format24Hour="H:mm\nE, dd MMM"
 -->
    <string name="rss_feeds_title">Select RSS News Feed</string>
    <string name="pref_header_credits">App settings</string>
    <string-array name="rss_news_feeds">
        <item>BBC News Front Page</item>
        <item>BBC World</item>
        <item>BBC UK</item>
        <item>BBC England</item>
        <item>BBC Northern Ireland</item>
        <item>BBC Scotland</item>
        <item>BBC Wales</item>
        <item>BBC Business</item>
        <item>BBC Politics</item>
        <item>BBC Health</item>
        <item>BBC Education</item>
        <item>BBC Science\/Nature</item>
        <item>BBC Technology</item>
        <item>BBC Entertainment</item>
        <item>BBC UK Sport</item>
        <item>BBC International Sport</item>
        <item>Sky News Home</item>
        <item>Sky News UK</item>
        <item>Sky News World</item>
        <item>Sky News US</item>
        <item>Sky News Business</item>
        <item>Sky News Politics</item>
        <item>Sky News Technology</item>
        <item>Sky News Entertainment</item>
        <item>Sky News Strange News</item>
        <item>Traffic Scotland Incidents</item>
    </string-array>
    <string-array name="rss_news_urls">
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/front_page/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/world/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/uk/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/england/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/northern_ireland/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/scotland/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/wales/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/business/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/uk_politics/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/health/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/education/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/sci/tech/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/technology/rss.xml</item>
        <item>http://newsrss.bbc.co.uk/rss/newsonline_uk_edition/entertainment/rss.xml</item>
        <item>http://feeds.bbci.co.uk/sport/rss.xml?edition=uk</item>
        <item>http://feeds.bbci.co.uk/sport/rss.xml?edition=int</item>
        <item>http://feeds.skynews.com/feeds/rss/home.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/uk.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/world.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/us.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/business.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/politics.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/technology.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/entertainment.xml</item>
        <item>http://feeds.skynews.com/feeds/rss/strange.xml</item>
        <item>http://trafficscotland.org/rss/feeds/currentincidents.aspx</item>
    </string-array>
</resources>
