<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_news_reports"
        android:title="@string/pref_title_new_message_notifications" />

    <ListPreference
        android:dependency="enable_news_reports"
        android:defaultValue="5"
        android:entries="@array/pref_news_story_titles"
        android:entryValues="@array/pref_news_story_values"
        android:key="news_stories"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_news_stories_to_display" />

    <ListPreference
        android:dependency="enable_news_reports"
        android:entries="@array/rss_news_feeds"
        android:entryValues="@array/rss_news_urls"
        android:key="rss_feed"
        android:title="@string/rss_feeds_title" />

</PreferenceScreen>
