<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="scot.mclarentech.magicmirror.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_cloud_black_24dp"
        android:title="@string/pref_header_weather" />

    <header
        android:fragment="scot.mclarentech.magicmirror.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_news_black_24dp"
        android:title="@string/pref_header_news" />

    <header
        android:fragment="scot.mclarentech.magicmirror.SettingsActivity$CreditsPreferenceFragment"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/pref_header_credits" />


    <!--header
        android:fragment="scot.mclarentech.magicmirror.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" /-->

</preference-headers>
