<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="scot.mclarentech.magicmirror.FullscreenActivity">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#ffffff"
        android:textSize="50sp"
        tools:background="@android:color/black"
        />

<LinearLayout
    android:id="@+id/ll_master"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/condIcon"
            android:contentDescription="@string/weatherIconDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <!--android:layout_alignParentLeft="true"/-->
            <!--android:layout_below="@id/cityText"-->

        <TextView
            android:id="@+id/textViewIcon"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start|center_vertical"
            android:text=""
            android:textAlignment="inherit"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:drawableLeft="@drawable/clear_day" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:format12Hour="@string/status_bar_clock_12hr_format"
            android:format24Hour="@string/status_bar_clock_24hr_format"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewWeather"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_gravity="top|start"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNews"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:gravity="top|end"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="8pt"
                android:textStyle="bold" />

            <!--ListView
                android:id="@+id/ListViewRight"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                /-->

        </LinearLayout>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <WebView
        android:id="@+id/webIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="50"
        android:visibility="invisible" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="50"
        android:scaleX="1"
        android:scaleY="1"
        android:visibility="visible" />


</LinearLayout>

    <WebView
        android:id="@+id/webViewEE"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="invisible" />
        <!--android:scaleX="1"
        android:scaleY="1"-->
</FrameLayout>

